# spark-rust-udfs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/spark_udfs/: benchmark.py  rust.py
python/spark_udfs/average_ctr/: native.py  pyfns.py  rust.py
python/spark_udfs/sqrt_and_mol/: native.py  pandas_fns.py  polars_fns.py  pyfns.py  rust.py  scala.py
python/test/: test_rust_fns.py  test_rust_udfs.py
scala/scala-udfs/: .scalafmt.conf  build.sbt
scala/scala-udfs/src/main/scala/com/github/tkasu/udfs/: SqrtAndMolUDF.scala
scala/scala-udfs/src/test/scala/com/github/tkasu/: UdfsSpec.scala
src/: lib.rs
